@@ -12,6 +12,8 @@
 ::genpi64			base ebuild
 ::gentoo			update keywords
 ::prototype99		remove PYVER variable, remove alpha code, make better use of HOMEPAGE, PN & PV, add virtual/mime-types support
+*python-2.7.18-r103
+::xor-overlay		update copyright year, add verify-sig use flag, add BDEPEND
 *python-2.7.18-r102
 ::gentoo			fix scriptdir variable, add new symlinks
 ::prototype99		make better use of variables
